RESOLVED FIXED193188
Deactivate audio session whenever possible
https://bugs.webkit.org/show_bug.cgi?id=193188
Summary Deactivate audio session whenever possible
Eric Carlson
Reported 2019-01-06 23:42:57 PST
Deactivate the audio session when it is no longer possible to play audio, so an application that was interrupted by WebKit can resume playing. This should only happen for WK2, because we can't know if a WK1 host application plays audio itself.
Attachments
Patch (21.52 KB, patch)
2019-01-07 00:53 PST, Eric Carlson
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (2.33 MB, application/zip)
2019-01-07 02:44 PST, EWS Watchlist
no flags
Patch (21.71 KB, patch)
2019-01-07 09:43 PST, Eric Carlson
no flags
Patch (21.74 KB, patch)
2019-01-07 10:04 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2019-01-06 23:43:28 PST
Eric Carlson
Comment 2 2019-01-07 00:53:48 PST
EWS Watchlist
Comment 3 2019-01-07 02:44:16 PST
Comment on attachment 358483 [details] Patch Attachment 358483 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10656006 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 4 2019-01-07 02:44:18 PST
Created attachment 358489 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Eric Carlson
Comment 5 2019-01-07 09:43:16 PST
Eric Carlson
Comment 6 2019-01-07 10:04:45 PST
Jer Noble
Comment 7 2019-01-07 13:19:33 PST
Comment on attachment 358504 [details] Patch r=me, with the nit that this area of the code needs some refactoring. We should investigate making it cheaper to access PlatformMediaSessionManager::sharedManager() when no sessions exist yet and move these global settings (and other DeprecatedGlobalSettings) directly into the PlatformMediaSessionManager itself.
Eric Carlson
Comment 8 2019-01-07 13:24:16 PST
(In reply to Jer Noble from comment #7) > Comment on attachment 358504 [details] > Patch > > r=me, with the nit that this area of the code needs some refactoring. We > should investigate making it cheaper to access > PlatformMediaSessionManager::sharedManager() when no sessions exist yet and > move these global settings (and other DeprecatedGlobalSettings) directly > into the PlatformMediaSessionManager itself. I filed bug 193206 for this.
WebKit Commit Bot
Comment 9 2019-01-07 13:47:59 PST
Comment on attachment 358504 [details] Patch Clearing flags on attachment: 358504 Committed r239694: <https://trac.webkit.org/changeset/239694>
WebKit Commit Bot
Comment 10 2019-01-07 13:48:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.