Deactivate audio session whenever possible https://bugs.webkit.org/show_bug.cgi?id=193188 <rdar://problem/42678977>

Reviewed by Jer Noble.

Source/WebCore:

Test: media/deactivate-audio-session.html

* platform/audio/AudioSession.cpp:
(WebCore::AudioSession::tryToSetActive):
(WebCore::AudioSession::tryToSetActiveInternal):
* platform/audio/AudioSession.h:
(WebCore::AudioSession::isActive const):

* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::removeSession):
(WebCore::deactivateAudioSession):
(WebCore::PlatformMediaSessionManager::shouldDeactivateAudioSession):
(WebCore::PlatformMediaSessionManager::setShouldDeactivateAudioSession):
* platform/audio/PlatformMediaSessionManager.h:

* platform/audio/ios/AudioSessionIOS.mm:
(WebCore::AudioSession::tryToSetActiveInternal):
(WebCore::AudioSession::tryToSetActive): Deleted.

* platform/audio/mac/AudioSessionMac.cpp:
(WebCore::AudioSession::tryToSetActiveInternal):
(WebCore::AudioSession::tryToSetActive): Deleted.

* testing/Internals.cpp:
(WebCore::Internals::audioSessionActive const):
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):

LayoutTests:

* TestExpectations: Skip the new test.
* media/deactivate-audio-session-expected.txt: Added.
* media/deactivate-audio-session.html: Added.
* platform/ios/TestExpectations: Run the new test.
* platform/mac-wk2/TestExpectations: Ditto.


Canonical link: https://commits.webkit.org/207714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239694 268f45cc-cd09-0410-ab3c-d52691b4dbfc