Source/WebCore/platform/audio/AudioSession.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2019 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -87,13 +87,18 @@ public:
     bool isMuted() const;
     void handleMutedStateChange();
 
+    bool isActive() const { return m_active; }
+
 private:
     friend class NeverDestroyed<AudioSession>;
     AudioSession();
     ~AudioSession();
 
+    bool tryToSetActiveInternal(bool);
+
     std::unique_ptr<AudioSessionPrivate> m_private;
     HashSet<MutedStateObserver*> m_observers;
+    bool m_active { false }; // Used only for testing.
 };
 
 }
